UX: Adding border-radius to search input

--- a/scss/desktop/fkb-d-search.scss
+++ b/scss/desktop/fkb-d-search.scss
@@ -30,6 +30,7 @@
     }
     input#search-term {
       background: var(--fkb-panel);
+      border-radius: var(--d-input-border-radius);
       &:focus {
         background: var(--secondary);
       }
