--- a/scss/common/fkb-c-docs.scss
+++ b/scss/common/fkb-c-docs.scss
@@ -5,21 +5,28 @@
   padding: 0.5em;
   border-radius: var(--d-default-border-radius);
   margin-bottom: 2em;
-  .topic-list {
-    .topic-list-body {
-      display: table-row-group;
-    }
-    .topic-list-item {
-      display: table-row;
-      border-bottom: 1px solid var(--primary-low);
-    }
-    .main-link {
-      background: none;
-      box-shadow: none;
-      border-radius: 0;
-      .link-bottom-line {
-        padding: 0;
-        font-size: var(--font-0);
+  .docs-browse {
+    .docs-topic-list {
+      .topic-list {
+        .topic-list-body {
+          display: table-row-group;
+        }
+        .topic-list-item {
+          display: table-row;
+          border-bottom: 1px solid var(--primary-low);
+        }
+        .main-link {
+          background: none;
+          box-shadow: none;
+          border-radius: 0;
+          .link-bottom-line {
+            padding: 0;
+            font-size: var(--font-0);
+          }
+          .topic-excerpt {
+            display: none;
+          }
+        }
       }
     }
   }
@@ -27,6 +34,7 @@
     margin: 0 10px 0 0;
   }
   .topic-body {
+    width: 100%;
     background: none;
     box-shadow: none;
     border-radius: 0;
