--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -9,6 +9,11 @@
   max-height: calc(100vh - 6em);
   width: var(--d-sidebar-width);
   @include bg-br;
+  transition: margin-right 0.25s;
+  body.fkb-panel-hidden & {
+    position: fixed;
+    right: -100%;
+  }
   .fkb-panel {
     display: none;
     margin-bottom: 0.5em;
@@ -181,6 +186,14 @@
       .d-icon {
         margin-right: 0.25em;
         font-size: 0.9em;
+      }
+    }
+    button.fkb-panel-toggle {
+      position: fixed;
+      bottom: 1em;
+      right: 1em;
+      body.fkb-panel-hidden & {
+        transform: rotate(180deg);
       }
     }
   }
