--- a/javascripts/discourse/templates/mobile/components/navigation-bar.hbs
+++ b/javascripts/discourse/templates/mobile/components/navigation-bar.hbs
@@ -9,5 +9,9 @@
 <PluginOutlet
   @name="extra-nav-item"
   @connectorTagName="li"
-  @outletArgs={{hash category=this.category filterMode=this.filterMode}}
+  @outletArgs={{hash
+    category=this.category
+    tag=this.tag
+    filterMode=this.filterMode
+  }}
 />
