--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -11,8 +11,7 @@
   @include bg-br;
   transition: margin-right 0.25s;
   body.fkb-panel-hidden & {
-    position: fixed;
-    right: -100%;
+    display: none;
   }
   .fkb-panel {
     display: none;
@@ -188,13 +187,19 @@
         font-size: 0.9em;
       }
     }
-    button.fkb-panel-toggle {
-      position: fixed;
-      bottom: 1em;
-      right: 1em;
-      body.fkb-panel-hidden & {
-        transform: rotate(180deg);
-      }
+  }
+}
+
+
+// FKB Panel Toggle Button
+
+.fkb-panel-toggle-button {
+  button.fkb-panel-toggle {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    body.fkb-panel-hidden & {
+      transform: rotate(180deg);
     }
   }
 }
