add fkb panel hide keyframe

--- a/scss/var-mixin.scss
+++ b/scss/var-mixin.scss
@@ -37,6 +37,17 @@
 
 // Keyframes
 
+// FKB Panel Hide / Show
+
+@keyframes fkb-panel-hide {
+  0% {
+    @include sticky;
+  }
+  100% {
+    position: fixed;
+  }
+}
+
 // Topics and Posts
 @keyframes background-fade-topiclight {
   0% {
