--- a/scss/desktop/fkb-d-right-sidebar-blocks.scss
+++ b/scss/desktop/fkb-d-right-sidebar-blocks.scss
@@ -23,12 +23,14 @@
         padding: 1em;
         overflow-y: auto;
         grid-area: tc-right-sidebar;
+        transition: transform var(--d-sidebar-animation-time);
+        body.fkb-panel-hidden & {
+          animation: fkb-panel-hide var(--d-sidebar-animation-time) forwards;
+          transform: translateX(calc(var(--d-sidebar-width) + 2em));
+        }
         @media screen and (max-width: 1099px) {
           display: none;
-        }
-        body.fkb-panel-hidden & {
-          display: none;
-        }
+        }        
       }
     }
   }
