--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -12,7 +12,7 @@
   transition: transform var(--d-sidebar-animation-time);
   body.fkb-panel-hidden & {
     animation: fkb-panel-hide var(--d-sidebar-animation-time) forwards;
-    transform: translateX(calc(var(--d-sidebar-width) + 2em));
+    transform: translateX(100vw);
   }
   .fkb-panel {
     display: none;
