--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -19,6 +19,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
         "loader fkb-panel"
         "topic-list fkb-panel";
       grid-template-rows: auto auto auto auto 1fr;
+      grid-template-columns: 1fr;
     }
     .list-controls {
       grid-area: nav;
@@ -84,7 +85,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
       "nav loader fkb-panel"
       "nav topic-list fkb-panel";
     grid-template-rows: auto auto auto 1fr;
-    grid-template-columns: 1fr;
+    grid-template-columns: 0fr minmax(0, 1fr);
     gap: 0 2em;
     @media screen and (max-width: 1100px) {
       gap: 0;
