Add right sidebar to discovery below

--- a/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
+++ b/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
@@ -85,4 +85,10 @@
       </div>
     {{/unless}}
   </div>
+
+  {{#if (theme-setting 'right_sidebar_below_fkb_panel')}}
+    <div class="tc-right-sidebar">
+      {{right-sidebar-blocks}}
+    </div>
+  {{/if}}
 {{/unless}}
