--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -219,6 +219,7 @@
   }
   .fkb-panel-sidebar {
     .fkb-panel {
+      position: relative;
       margin-bottom: 1em;
     }
     .tc-right-sidebar {
