--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -220,6 +220,7 @@
   .fkb-panel-sidebar {
     .fkb-panel {
       position: relative;
+      top: 0;
       margin-bottom: 1em;
     }
     .tc-right-sidebar {
