Update modal container

--- a/scss/common/fkb-c-global.scss
+++ b/scss/common/fkb-c-global.scss
@@ -129,7 +129,7 @@ img.avatar,
   outline: 0;
 }
 
-.modal-inner-container {
+.d-modal__container {
   border-radius: var(--d-default-border-radius);
 }
 
