--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,7 @@
 
 @import "common/fkb-c-category";
 @import "common/fkb-c-topic-list";
+@import "common/fkb-c-bulk-select";
 @import "common/fkb-c-topic";
 @import "common/fkb-c-private-message";
 @import "common/fkb-c-composer";
