--- a/scss/common/fkb-c-bulk-select.scss
+++ b/scss/common/fkb-c-bulk-select.scss
@@ -3,28 +3,14 @@
 body[class*="tag-"]:not(.archetype-regular):not(.archetype-banner),
 body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
   &.bulk-select-enabled:not(.bulk-still-active) {
-    .dismiss-container-top {
-      @include sticky;
-      top: 9px;
-      z-index: z("header");
-      background-color: var(--secondary);
-      .desktop-view & {
-        button.dismiss-read {
-          border: 1px solid rgba(0,0,0,0);
-          box-shadow: 0px 0px 0px 1px var(--primary-low);
-        }
+    .desktop-view & {
+      .dismiss-container-top {
+        @include sticky;
+        top: 13px;
+        z-index: z("header");
       }
     }
     .mobile-view & {
-      .dismiss-container-top {
-        top: 0;
-        z-index: z("header") - 1;
-        button.dismiss-read {
-          box-shadow: none;
-          border-top: 1px solid var(--primary-low);
-          border-bottom: 1px solid var(--primary-low);
-        }
-      }
       .list-controls .navigation-container .navigation-controls {
         display: none;
       }
@@ -89,7 +75,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     }
     &.sticky-header .topic-list-header {
       .mobile-view & {
-        max-width: calc(100% - 20px);
+        max-width: calc(100% - 36px);
         overflow: hidden;
         tr {
           max-width: 100%;
@@ -105,10 +91,15 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     }
     .topic-list-item {
       position: relative;
+      &:first-child {
+        &.bulk-select {
+          top: 0;
+        }
+      }
       .topic-list-data {
         &.bulk-select {
           position: absolute;
-          top: 0;
+          top: 8px;
           left: 0;          
           width: 100%;
           height: 100%;
@@ -118,11 +109,11 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
             display: flex;
             flex-direction: row-reverse;
             padding: 10px;
-            height: calc(100% - 20px);
+            height: calc(100% - 36px);
             background: rgba(var(--tertiary-rgb), 0.03);
             border-radius: var(--d-default-border-radius);
             .mobile-view & {
-              margin-top: -7px;
+              margin-top: 1px;
             }
             .discourse-no-touch &, 
             .discourse-touch.desktop-view & {
@@ -137,16 +128,6 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
             &.selected {
               background: rgba(var(--tertiary-rgb), 0.3);
             }
-            .mobile-view & {
-              input.bulk-select {
-                position: absolute;
-                top: 0.5em;
-                right: 0.25em
-              }
-            }
-          }
-          + .main-link {
-            padding-left: 1em;
           }
         }
       }
