--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -232,6 +232,38 @@
       @include bg-br;
       padding: 1em;
       overflow-y: auto;
+
+      // Add custom scrollbar (borrow from sidebar)
+      --scrollbarBg: transparent;
+      --scrollbarThumbBg: var(--primary-low);
+      --scrollbarWidth: 0.5em;
+    
+      scrollbar-color: transparent var(--scrollbarBg);
+      transition: scrollbar-color 0.25s ease-in-out;
+      transition-delay: 0.5s;
+    
+      &::-webkit-scrollbar {
+        width: var(--scrollbarWidth);
+      }
+    
+      &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+        border-radius: calc(var(--scrollbarWidth) / 2);
+      }
+    
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+    
+      &:hover {
+        scrollbar-color: var(--scrollbarThumbBg) var(--scrollbarBg);
+    
+        &::-webkit-scrollbar-thumb {
+          background-color: var(--scrollbarThumbBg);
+        }
+    
+        transition-delay: 0s;
+      }
     }
   }
-}     
+}
