FIX: Add height to make the last component sticky

--- a/scss/desktop/fkb-d-right-sidebar-blocks.scss
+++ b/scss/desktop/fkb-d-right-sidebar-blocks.scss
@@ -41,6 +41,7 @@
           }
         }
         
+        height: 100%;
         max-width: var(--d-sidebar-width);
         width: 100%;
         grid-area: tc-right-sidebar;
