--- a/scss/desktop/fkb-d-right-sidebar-blocks.scss
+++ b/scss/desktop/fkb-d-right-sidebar-blocks.scss
@@ -55,36 +55,7 @@
         } 
 
         // Add custom scrollbar (borrow from sidebar)
-        --scrollbarBg: transparent;
-        --scrollbarThumbBg: var(--primary-low);
-        --scrollbarWidth: 0.5em;
-    
-        scrollbar-color: transparent var(--scrollbarBg);
-        transition: scrollbar-color 0.25s ease-in-out;
-        transition-delay: 0.5s;
-    
-        &::-webkit-scrollbar {
-          width: var(--scrollbarWidth);
-        }
-    
-        &::-webkit-scrollbar-thumb {
-          background-color: transparent;
-          border-radius: calc(var(--scrollbarWidth) / 2);
-        }
-    
-        &::-webkit-scrollbar-track {
-          background-color: transparent;
-        }
-    
-        &:hover {
-          scrollbar-color: var(--scrollbarThumbBg) var(--scrollbarBg);
-    
-          &::-webkit-scrollbar-thumb {
-            background-color: var(--scrollbarThumbBg);
-          }
-    
-          transition-delay: 0s;
-        }
+        @include custom-scrollbar;
       }
     }
   }
