UX: Makes less max height the right sidebar blocks last component

--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -243,7 +243,7 @@
             @include sticky;
             top: calc(var(--header-offset) + 2em);
             overflow-y: auto;
-            max-height: calc(100vh - var(--header-offset) - 4em);
+            max-height: calc(100vh - 10em);
           }
         }
       }
