UX: Topic list tags low line height causes the letter cut off

--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -120,7 +120,7 @@
           flex: 1 0 auto;
           justify-content: center;
           max-width: 100%;
-          line-height: var(--line-height-small);
+          line-height: var(--line-height-large);
           border: 0.5em solid transparent;
           background: var(--fkb-btn);
           font-size: var(--font-down-1-rem);
