--- a/scss/common/fkb-c-topic.scss
+++ b/scss/common/fkb-c-topic.scss
@@ -13,6 +13,28 @@
   }
 }
 
+// Topic timeline
+// Narrow screen and mobile view
+
+.container.posts {
+  #topic-progress-wrapper {
+    .topic-admin-menu-button .toggle-admin-menu {
+      border-top-left-radius: var(--d-default-border-radius);
+      border-top-right-radius: var(--d-default-border-radius);
+      border-bottom-left-radius: var(--d-default-border-radius);
+      border-bottom-right-radius: var(--d-default-border-radius);
+    }
+    .topic-admin-menu-button-container + #topic-progress,       
+    #topic-progress {
+      border-top-left-radius: var(--d-default-border-radius);
+      border-top-right-radius: var(--d-default-border-radius);
+      border-bottom-left-radius: var(--d-default-border-radius);
+      border-bottom-right-radius: var(--d-default-border-radius);
+      overflow: hidden;
+    }
+  }
+}
+
 .post-notice{
   border-radius: var(--d-default-border-radius);
   border-top: none;
