--- a/common/common.scss
+++ b/common/common.scss
@@ -22,3 +22,4 @@
 @import "common/fkb-c-docs";
 @import "common/fkb-c-alternative-voting-category";
 @import "common/fkb-c-kanban";
+@import "common/fkb-c-search-banner";
