Import modern category theme component

--- a/common/common.scss
+++ b/common/common.scss
@@ -23,3 +23,4 @@
 @import "common/fkb-c-alternative-voting-category";
 @import "common/fkb-c-kanban";
 @import "common/fkb-c-search-banner";
+@import "common/fkb-c-modern-category"
