--- a/scss/common/fkb-c-docs.scss
+++ b/scss/common/fkb-c-docs.scss
@@ -22,6 +22,9 @@
           .link-bottom-line {
             padding: 0;
             font-size: var(--font-0);
+            html.mobile-view & {
+              font-size: var(--font-down-1);
+            }
           }
           .topic-excerpt {
             display: none;
